# yandex-direct-mcp-plugin

./: .buildinfo  .env.test.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  PLAN.md  README.md  SKILL.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.agents/plugins/: marketplace.json
.claude-plugin/: plugin.json
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: auth.doctree  cli.doctree  issue-43-parity.doctree  tools.doctree
.github/workflows/: docs.yml  test.yml
_sources/: index.rst.txt
api/: auth.html  cli.html  issue-43-parity.html  tools.html
docs/: Makefile  conf.py  index.rst  token-budget.md
docs/api/: auth.rst  cli.rst  issue-43-parity.rst  tools.rst
hooks/: hooks.json  run-server.sh  setup.sh
plugins/yandex-direct/: .mcp.json  run-server.sh
scripts/: audit_wsdl.py  sync-codex-bundle.sh  update-pins.sh  update-version.sh
server/: config.py  contract.py  main.py
server/auth/: oauth.py  pkce.py  storage.py
server/cli/: runner.py
server/tools/: __init__.py  adextensions.py  ads.py  (+43 more)
tests/: audit.py  cli_recorder.py  conftest.py  helpers.py  measure_tool_tokens.py  sanitize.py  setup.py  test_adgroups.py  test_ads.py  test_advideos.py  test_agency.py  test_audience.py  test_audit.py  test_audit_wsdl.py  test_auth.py  test_bidmodifiers.py  test_bids.py  test_businesses.py  test_campaigns.py  test_changes.py  test_cli_recorder.py  test_cli_runner.py  test_clients.py  test_codex_bundle_sync.py  test_codex_plugin_packaging.py  test_config.py  test_creatives.py  test_dictionaries.py  test_direct_cli_0312_parity.py  test_docs_contract_sync.py  test_dynamic_ads.py  test_dynamic_feed_ad_targets.py  test_dynamic_targets.py  test_extensions.py  test_feeds.py  test_helpers.py  test_images.py  test_issue_108_regression.py  test_keyword_bids.py  test_keywords.py  (+24 more)
(+39 files in other folders)
