[project]
name = "yandex-direct-mcp-plugin"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = ["mcp", "httpx>=0.27", "python-dotenv>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff", "mypy", "pre-commit"]
docs = ["sphinx", "sphinx-autodoc-typehints", "furo"]

[build-system]
requires = ["setuptools>=75"]

[tool.setuptools.packages.find]
include = ["server*"]
